feat: new workflows testing framework